update cucmber tests with new filed inputs

--- a/app/views/providers/limitations/_legacy_proceeding_types.html.erb
+++ b/app/views/providers/limitations/_legacy_proceeding_types.html.erb
@@ -3,8 +3,8 @@
               method: :patch,
               local: true) do |form| %>
 
-<%= page_template(page_title: t('.h1-heading')) do %>
-
+<%= page_template page_title: t('.h1-heading'), template: :basic, form: form do %>
+  <h1 class="govuk-heading-xl"><%= t('.h1-heading') %></h1>
   <h2 class="govuk-heading-m">
     <%= t('.proceedings_heading') %>
   </h2>
