--- a/app/views/shared/check_answers/_emergency_costs.html.erb
+++ b/app/views/shared/check_answers/_emergency_costs.html.erb
@@ -4,14 +4,16 @@
         question: t('.request_higher_limit'),
         answer: yes_no(@legal_aid_application.emergency_cost_override)
       ) %>
-  <%= check_answer_no_link(
-        name: :emergency_cost_requested,
-        question: t(".new_cost_limit"),
-        answer: gds_number_to_currency(@legal_aid_application.emergency_cost_requested,  precision: 0)
-      ) %>
-  <%= check_answer_no_link(
-        name: :emergency_cost_reasons,
-        question: t(".new_limit_reasons"),
-        answer: @legal_aid_application.emergency_cost_reasons
-      ) %>
+  <% if @legal_aid_application.emergency_cost_override %>
+    <%= check_answer_no_link(
+          name: :emergency_cost_requested,
+          question: t(".new_cost_limit"),
+          answer: gds_number_to_currency(@legal_aid_application.emergency_cost_requested,  precision: 0)
+        ) %>
+    <%= check_answer_no_link(
+          name: :emergency_cost_reasons,
+          question: t(".new_limit_reasons"),
+          answer: @legal_aid_application.emergency_cost_reasons
+        ) %>
+  <% end %>
 </dl>
