--- a/app/views/shared/check_answers/_merits.html.erb
+++ b/app/views/shared/check_answers/_merits.html.erb
@@ -222,25 +222,27 @@
               ) %>
         </dl>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-2">
-          <%= check_answer_link(
-                name: :emergency_cost_requested,
-                url: providers_legal_aid_application_limitations_path(@legal_aid_application),
-                question: t('.items.cost_override_question'),
-                answer: gds_number_to_currency(@legal_aid_application.emergency_cost_requested,  precision: 0),
-                read_only: true
-              ) %>
-        </dl>
+        <% if @legal_aid_application.emergency_cost_override %>
+          <dl class="govuk-summary-list govuk-!-margin-bottom-2">
+            <%= check_answer_link(
+                  name: :emergency_cost_requested,
+                  url: providers_legal_aid_application_limitations_path(@legal_aid_application),
+                  question: t('.items.cost_override_question'),
+                  answer: gds_number_to_currency(@legal_aid_application.emergency_cost_requested,  precision: 0),
+                  read_only: true
+                ) %>
+          </dl>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-2">
-          <%= check_answer_link(
-                name: :emergency_cost_requested,
-                url: providers_legal_aid_application_limitations_path(@legal_aid_application),
-                question: t('.items.enter_cost_reasons'),
-                answer: @legal_aid_application.emergency_cost_reasons,
-                read_only: true
-              ) %>
-        </dl>
+          <dl class="govuk-summary-list govuk-!-margin-bottom-2">
+            <%= check_answer_link(
+                  name: :emergency_cost_requested,
+                  url: providers_legal_aid_application_limitations_path(@legal_aid_application),
+                  question: t('.items.enter_cost_reasons'),
+                  answer: @legal_aid_application.emergency_cost_reasons,
+                  read_only: true
+                ) %>
+          </dl>
       <% end %>
+    <% end %>
   <% end %>
 <% end %>
