add db fields and record if no cash incomes
add fields to legal aid application model to record when there are no cash incomes and no cash outgoings selected, show none selected when returning to these pages

--- a/app/views/citizens/cash_incomes/_cash_income_form.html.erb
+++ b/app/views/citizens/cash_incomes/_cash_income_form.html.erb
@@ -24,7 +24,7 @@
       </div>
 
       <%= form.govuk_radio_divider %>
-      <%= form.govuk_check_box :none_selected, true, '', multiple: false, label: {text: t('.none_selected')} %>
+      <%= form.govuk_check_box :none_selected, true, '', multiple: false, label: {text: t('.none_selected')}, checked: @legal_aid_application.no_cash_income? %>
     <% end %>
 
     <%= next_action_buttons(
